--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body{
-	background: url("bigfon.jpg");
+	background: url("../image/bigfon.jpg");
 	background-size: cover;
 	color: #000;
 }
@@ -15,18 +15,20 @@ body{
 
 }
 
-.img{
+/*.img{
 	text-align: center;
 	float: left;
-}
+}*/
 
 .text{
 	font-size: 20px;
-	float: right; 
+	
 	vertical-align: top;
 }
 
 .button{
 	text-align: center;
 	font-size: 100px;
+	float: right;
+
 }
