--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@ body{
 	background: url("../image/bigfon.jpg"); 
 	background-size: cover;
 	color: #000;
+
 }
 
 /*h1 {
@@ -10,27 +11,37 @@ body{
 }*/
 
 .fix{
-	width: 1000px;
+	max-width: 1010px;
 	margin: 0 auto;
 
 }
 
-/*.img{
-	text-align: center;
-	float: left;
-}*/
+.header {
+    height: 60px;
+    width: 100%;
+    position: relative;
+}
 
+.fixmenu {
+    height: inherit;
+    background: #00ffff;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+}
 
-.header{
-	text-align: left;
 
 }
-.header span {
+#menuLinks a {
 	text-align: center;
 	border: 1px solid blue;
 	background-color: #00ffff;
 	color: black;
 	padding: 5px;
+	text-decoration: none;
+	margin: 10px 0px;
 }
 
 .header button {
@@ -39,16 +50,54 @@ body{
 	background-color: #00ffff;
 	color: black;
 	padding: 7px;
-	margin: 10px 0px;
+	margin: 10px 0;
 }
+
+h1{
+	margin: 0;
+	text-align: center;
+	height: 68px;
+}
+
 
 .text{
 	font-size: 20px;
 	vertical-align: top;
+	float: right;
+	overflow: hidden;
+	width: 479px;
+	height: 250px;
+	margin: 10px;
+}
+
+.img{
+	float: left;
+	width: 479px;
+	height: 250px;
+	margin: 10px;
 }
 
 .button{
-	font-size: 100px;
+	text-align: center;
+}
+
+.button button{
+	text-align: center;
+	border: 1px solid blue;
+	background-color: #00ffff;
+	color: black;
+	padding: 7px;
+	margin: 10px 0px;
+	overflow: hidden;
+}
+.addMenu {
+	text-align: center;
+	border: 1px solid blue;
+	background-color: #00ffff;
+	color: black;
+	padding: 7px;
+	margin: 10px 0px;
+	overflow: hidden;
 }
 
 #itemlist {
@@ -64,8 +113,4 @@ body{
 
 .target{
 	cursor: pointer;
-}
-
-.dilete{
-	margin: 0;
 }
